# welle-cli

./: .gitignore  CMakeLists.txt  README.md  TIPS.txt  compile.sh  play-pcm.sh  read-pipe.sh  rec.sh  stream.sh  usage.txt  welle-cli.service  welle-cli@.service
conf/: captation.ini.dist  default.dist.ini
src/backend/: dab-constants.cpp  dab-constants.h  dabplus_decoder.cpp  decoder_adapter.cpp  decoder_adapter.h  ofdm-processor.cpp  radio-receiver.cpp  tools.cpp
src/input/: input_factory.cpp  rtl_sdr.cpp  rtl_sdr.h  virtual_input.h
src/libs/fec/: encode_rs.h  init_rs.h  init_rs_char.c
src/various/: channels.cpp  channels.h  wavfile.c
src/welle-cli/: welle-cli.cpp
